--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,9 @@
             "label": "C/C++: clang build active file",
             "command": "/usr/bin/clang",
             "args": [
+                "-L",
+                "/mario/libraries_c",
+                "-lglut -lGLU",
                 "-g",
                 "${file}",
                 "-o",
