--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "array": "c",
         "string": "c",
         "string_view": "c",
-        "ranges": "c"
+        "ranges": "c",
+        "cstdio": "c",
+        "*.def": "c"
     }
 }
